<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".einkaufsliste.EinkaufslisteActivity"
    android:background="@drawable/standarthintergrund">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="103dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/imageButton_einkauf_zurueck"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/zurueck"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/einkaufsliste"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="96dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout" >

        <ScrollView
            android:id="@+id/scrollView5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/textViewInternetError"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/standart_item_background"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">

                    <EditText
                        android:id="@+id/editText_einkaufitem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:ems="10"
                        android:fontFamily="sans-serif"
                        android:hint="@string/einkaufsliste_editText_hint"
                        android:inputType="text"
                        android:maxLength="20"
                        android:minHeight="48dp"
                        android:textSize="25sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/button_einkauf_erstellen"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/standart_button_background"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/einkaufsliste_erstellen"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    app:backgroundTint="@null" />

                <LinearLayout
                    android:id="@+id/einkaufItemLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" />

                <Button
                    android:id="@+id/button_einkauf_beenden"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/standart_button_background"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/einkaufsliste_beenden"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    app:backgroundTint="@null" />
            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/textViewInternetError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/internetErrorBackground"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/keine_internetverbindung"
            android:textAlignment="center"
            android:textSize="20sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>