...
                android:fontFamily="sans-serif-medium"
                android:text=""
                android:textColor="@color/black"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/einkaufItem_loeschen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
                android:layout_marginEnd="15dp"
                app:srcCompat="@android:drawable/ic_menu_delete" />

...
